# xadvisor

./: .gitignore  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json  pnpm-lock.yaml
app/frontend/: jest.config.ts  project.json  tsconfig.json
app/frontend/src/app/: layout.tsx
apps/backend/: project.json  pyproject.toml
apps/backend/backend/: settings.py
