[tool.coverage.run]
branch = true
source = [ "backend" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../coverage/backend/html' --cov-report xml:'../coverage/backend/coverage.xml' --html='../reports/backend/unittests/html/index.html' --junitxml='../reports/backend/unittests/junit.xml'"

[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Backend project"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "backend"

  [tool.poetry.dependencies]
  python = ">=3.10"
  django = "^5.0.7"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
